<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#292E32">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Logo Section -->
            <LinearLayout
                android:id="@+id/logo_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingVertical="6dp"
                android:paddingHorizontal="1dp"
                android:layout_marginBottom="54dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/app_name"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="8dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/app_name" />
                <TextView
                    android:id="@+id/app_description"
                    android:textColor="#BBBBBB"
                    android:textSize="15sp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/app_description" />
            </LinearLayout>

            <!-- Login Title -->
            <TextView
                android:id="@+id/login_title"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login" />

            <!-- Login Prompt -->
            <TextView
                android:id="@+id/login_prompt"
                android:textColor="#BBBBBB"
                android:textSize="15sp"
                android:layout_marginBottom="50dp"
                android:layout_marginHorizontal="1dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/login_prompt" />

            <!-- Email Field -->
            <EditText
                android:inputType="textEmailAddress"
                android:hint="@string/email_placeholder"
                android:textColorHint="@color/hint_color"
                android:id="@+id/email_edit_text"
                android:textColor="#919191"
                android:textSize="16sp"
                android:layout_marginBottom="19dp"
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_txtviews"
                android:paddingVertical="17dp"
                android:paddingLeft="16dp"
                android:paddingRight="32dp" />

            <!-- Password Field -->
            <LinearLayout
                android:id="@+id/password_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_txtviews"
                android:paddingVertical="17dp"
                android:paddingHorizontal="16dp"
                android:layout_marginBottom="30dp"
                android:layout_marginHorizontal="16dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/password_label"
                    android:textColor="#919191"
                    android:hint="Password"
                    android:textColorHint="@color/hint_color"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    />
                <ImageView
                    android:id="@+id/password_icon"
                    android:layout_width="20dp"
                    android:layout_height="18dp"
                    android:layout_marginVertical="1dp"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="fitXY" />
            </LinearLayout>

            <!-- Forgot Password -->
            <LinearLayout
                android:id="@+id/forgot_password_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="46dp"
                android:layout_marginStart="35dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/forgot_password_icon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="12dp"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="fitXY" />
                <TextView
                    android:id="@+id/forgot_password_text"
                    android:textColor="#B3B3B3"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/remember_password" />
            </LinearLayout>

            <!-- Forgot Password Link -->
            <TextView
                android:id="@+id/forgot_password_link"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="36dp"
                android:layout_marginHorizontal="35dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/forgot_password" />

            <!-- Login Button -->
            <LinearLayout
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="17dp"
                android:layout_marginBottom="27dp"
                android:background="@drawable/buttons_color"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingVertical="17dp">

                <TextView
                    android:id="@+id/login_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- New User Register -->
            <TextView
                android:id="@+id/new_user_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="21dp"
                android:layout_marginStart="40dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/new_here" />

            <!-- Register Button -->
            <LinearLayout
                android:id="@+id/register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="17dp"
                android:layout_marginBottom="19dp"
                android:background="@drawable/secondary_button"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingVertical="17dp">

                <TextView
                    android:id="@+id/register_button_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Continue Without Registering -->
            <LinearLayout
                android:id="@+id/continue_without_registering_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/continue_without_registering_text"
                    android:textColor="#FFFFFF"
                    android:textSize="10sp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/continue_without_registering" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>



